--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 Flask
+# Core mathematical and array manipulation library, used by all scripts
 numpy
+# Used for image file handling (PIL.Image)
 Pillow
-# TensorFlow is the core ML library for model loading and prediction
+# Used for reading the HAM10000_metadata.csv file
+pandas
+# Used for data splitting (train_test_split) and class weighting (compute_class_weight)
+scikit-learn
+# Deep learning framework, essential for model creation, loading, and prediction
 tensorflow==2.10.0 
-# OpenCV is used for all image operations (Grad-CAM, RGB layers, resizing)
-# We must use 'headless' for server environments without a graphical display.
+# OpenCV is used for image manipulation, Grad-CAM, and RGB visualization in app/app.py
+# 'headless' version is crucial for non-GUI server environments like Render
 opencv-python-headless==4.7.0.72
-# Gunicorn is the production server required by Render to run your Flask application
+# Gunicorn is the required production-ready WSGI server for your Flask application on Render
 gunicorn
